adaptive assistant page

--- a/assistant.html
+++ b/assistant.html
@@ -595,15 +595,15 @@
                                 and
                                 university either in Russia or Ukraine. Our professional attitude, commitment and
                                 highly
-                                experienced team are doing our best so all your needs are satisfied.</p><br><br>
+                                experienced team are doing our best so all your needs are satisfied.</p><br>
                             <h3 class="about-header">
                                 WE HELP STUDENTS NOT ONLY DURING ADMISSION AND OBTAINING VISA PERIODS, BUT WE ASSIST
                                 STUDENTS
                                 DURING THEIR WHOLE PERIOD OF STUDY.
-                            </h3>
+                            </h3><br>
                             <p class="paragraph">
                                 Studying in Ukraine and Russia is an exciting opportunity for every foreign
-                                student!</p><br><br>
+                                student!</p><br>
                             <p class="paragraph">
                                 These two countries are the best platforms for higher education among
                                 Eastern/Central European countries and in the whole world in general. These
@@ -612,7 +612,7 @@
                                 among
                                 top five countries of the world with the highest number of foreign students. Higher
                                 education is
-                                considered to be one of the main human values there.</p><br><br>
+                                considered to be one of the main human values there.</p><br>
                             <p class="paragraph">
                                 Harum molestiae dicta, provident, velit similique cumque, ut quod impedit labore
                                 suscipit
@@ -863,85 +863,85 @@
                 </div>
                 <div class="check-universe__list">
                     <div class="universe-items universe-items--ukraine">
-                        <div class="universe-item">
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about ukraine</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about ukraine</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about ukraine</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about ukraine</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about ukraine</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="universe-items universe-items--russia">
-                        <div class="universe-item">
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about russia</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about russia</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about russia</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about russia</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about russia</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="universe-items universe-items--admition">
-                        <div class="universe-item">
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about admition</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about admition</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about admition</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about admition</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
-                        <div class="universe-item">
+                        </a>
+                        <a href="#" class="universe-item">
                             <h3 class="universe-item__title">about admition</h3>
                             <hr class="universe-item__line">
                             <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -961,13 +961,14 @@
                 <div class="about">
                     <div class="title-block">
                         <h3 class="title-block__header">
-                            About Edugain Overseas
+                            COMMENT SECTION
                         </h3>
                         <div class="line">
                             <span class="line-circle"></span>
                         </div>
+                        <p class="title-block__info">Leave your questions, comments and suggestions below</p>
                     </div>
-                    <div class="about__wrap">
+                    <div class="about__wrap comments-section__comments">
                         <div class="comment-item comment-item--question">
                             <div class="comment-item__title">
                                 <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
