--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <li class="header__item"><a href="#" class="header__link">HOME</a>
                             <div class="hover-items">
                                 <ul class="hover-items__list">
-                                    <li class="subitem"><a class="subitem-link" href="#">About Edugain
+                                    <li class="subitem"><a class="subitem-link" href="assistant.html">About Edugain
                                             Overseas</a></li>
                                     <li class="subitem"><a class="subitem-link" href="#">Our services</a></li>
                                     <li class="subitem"><a class="subitem-link" href="#">About Edugain Overseas</a></li>
