add admition form

--- a/assistant.html
+++ b/assistant.html
@@ -545,7 +545,26 @@
             </div>
         </div>
     </section>
-
+    <section class="academic-header">
+        <div class="container">
+            <div class="academic-header__content">
+                <img class="academic-header__icon" src="./img/icons/graduation-icon.svg" alt="graduation">
+                <h1 class="academic-header__title">admissionS</h1>
+                <div class="academic">
+                    <!-- поменять год -->
+                    <span class="academic__years">2020 - 2021</span>
+                    <!---->
+                    <h5 class="academic__title">
+                        are open!
+                    </h5>
+                </div>
+                <div class="banner">
+                    apply
+                    now
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="about-section">
         <!-- decorate -->
         <div class="rectangle-decorate-block">
