try header mobile

--- a/assistant.html
+++ b/assistant.html
@@ -497,6 +497,7 @@
                     online</a>
             </div>
     </header>
+    <div class="header-slider-wrap"></div>
     <section class="header-slider">
         <div class="header-decorate">
             <div class="header-decorate__inner">
