fix form scroll

--- a/assistant.html
+++ b/assistant.html
@@ -1150,11 +1150,13 @@
                 <div class="forms-wrap">
                     <div class="comment-form">
                         <form action="#" class="admission-form js-admission-quick-block">
-                            <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                            <h3 class="admission-form__header"> US FEEDBACK </h3>
                             <p class="admission-form__subtitle">Fill out an online form to apply for Russian or
                                 Ukrainian
                                 universities</p>
-                            <input type="text" placeholder="First Name" class="admission-form__input">
+                            <!-- <input type="text" placeholder="First Name" class="admission-form__input"> -->
+                            <textarea class="admission-form__input" name="" id="" cols="30" rows="8"
+                                placeholder="Text"></textarea>
                             <input type="email" placeholder="Email" class="admission-form__input">
                             <input type="tel" placeholder="Phone" class="admission-form__input">
                             <input type="text" placeholder="Country" class="admission-form__input">
