try header-mobile

--- a/assistant.html
+++ b/assistant.html
@@ -500,6 +500,7 @@
     <div class="header-slider-wrap"></div>
     <section class="header-slider">
         <div class="header-decorate">
+            <img src="img/icons/header-decorate-mobile.png" alt="">
             <div class="header-decorate__inner">
             </div>
         </div>
