--- a/assistant.html
+++ b/assistant.html
@@ -536,14 +536,17 @@
                 </div>
             </div>
             <div class="header-slider__block">
+                <img src="img/icons/header-arrow-mobile.svg" class="decor-arrow" alt="">
                 <h1 class="header-slider__mail-title js-title">About US</h1>
                 <div class="subtitle-wrap">
                     <img src="./img/photo/dots.svg" alt="" class="dots-img">
+                    <img src="./img/icons/mobile-dots.svg" alt="" class="dots-img-mobile">
+
                     <h2 class="header-slider__subtitle">Edugain
                         <p class="header-subtitle-decorate">Overseas</p>
                     </h2>
                 </div>
-
+                <a href="#" class="btn btn--header-slider">Deeeee nkjn</a>
             </div>
         </div>
     </section>
