--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,8 @@
                             <div class="step-block">
                                 <img src="./img/icons/step-1.svg" alt="step-1" class="step-block__icon">
                                 <div class="step-block__wrap">
-                                    <h4 class="step-block__header">STEP: 1 <div class="tringle-decorate"></div>
+                                    <div class="tringle-decorate"></div>
+                                    <h4 class="step-block__header">STEP: 1
                                     </h4>
                                     <h5 class="step-block__subtitle">Genera Medicine</h5>
                                     <hr class="step-block__line">
@@ -1190,7 +1191,8 @@
                             <div class="step-block">
                                 <img src="./img/icons/step-2.svg" alt="step-1" class="step-block__icon">
                                 <div class="step-block__wrap">
-                                    <h4 class="step-block__header">STEP: 2<div class="tringle-decorate"></div>
+                                    <div class="tringle-decorate"></div>
+                                    <h4 class="step-block__header">STEP: 2
                                     </h4>
                                     <h5 class="step-block__subtitle">Genera Medicine</h5>
                                     <hr class="step-block__line">
@@ -1205,7 +1207,8 @@
                             <div class="step-block">
                                 <img src="./img/icons/step-3.svg" alt="step-1" class="step-block__icon">
                                 <div class="step-block__wrap">
-                                    <h4 class="step-block__header">STEP: 3<div class="tringle-decorate"></div>
+                                    <div class="tringle-decorate"></div>
+                                    <h4 class="step-block__header">STEP: 3
                                     </h4>
                                     <h5 class="step-block__subtitle">Genera Medicine</h5>
                                     <hr class="step-block__line">
@@ -1220,7 +1223,8 @@
                             <div class="step-block">
                                 <img src="./img/icons/step-4.svg" alt="step-1" class="step-block__icon">
                                 <div class="step-block__wrap">
-                                    <h4 class="step-block__header">STEP: 4<div class="tringle-decorate"></div>
+                                    <div class="tringle-decorate"></div>
+                                    <h4 class="step-block__header">STEP: 4
                                     </h4>
                                     <h5 class="step-block__subtitle">Genera Medicine</h5>
                                     <hr class="step-block__line">
