--- a/index.html
+++ b/index.html
@@ -234,22 +234,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -263,22 +263,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -292,22 +292,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -321,22 +321,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -350,22 +350,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -383,22 +383,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -412,22 +412,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
@@ -441,22 +441,22 @@
                             </summary>
                             <ul class="drop-down__list">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>About Edugain
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>About Edugain
                                             verseas</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Admission
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Admission
                                             Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
-                                            class="summary-arrow" class="drop-down__link-icon"
-                                            src="./img/icons/link arr small.svg" alt=">"><span>Media</span></a></li>
+                                            class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                            alt=">"><span>Media</span></a></li>
                                 <hr class="drop-down__line-small">
 
                             </ul>
